fix content spacing

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 :root {
     --input-font-size: 1em;
     --input-width: calc(var(--input-font-size)*18);
-    --space: 60px;
+    --left-margin: 60px;
     --content-width: 70%;
     --image-bar-width: calc(100% - (var(--content-width)));
 }
@@ -68,13 +68,14 @@ form p {
 
 form>:first-child,
 form>:last-child {
-    margin: var(--space);
+    margin-left: var(--left-margin);
 }
 
 form>div {
     background-color: white;
-    padding: 30px var(--space);
+    padding: 20px var(--left-margin);
     box-shadow: 0px 5px 12px -5px grey;
+    margin:60px auto 30px auto;
 }
 
 #details {
@@ -99,4 +100,14 @@ input {
     border-radius: 5px;
     font-size: var(--input-font-size);
     width: var(--input-width);
+}
+button{
+    background-color:#596D48;
+    border:none;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px grey;
+    color:white;
+    font-size: 1rem;
+    font-weight: bold;
+    padding:12px 40px;
 }
